--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <br>
     <p>
     Potential renters view available properties <a href="PropertyListing.html">here</a>.<br><br>
-    MUHU Associate Login? Please go <a href="NewProperty.html">here</a>.<br>
+    MUHU Associate Login? Please go <a href="addProperty.html">here</a>.<br>
     </p>
 </body>
 </html>
